mudança do conceito de status e inicio do desenvolvimento da cozinha
