# internal/usecase/kitchen/findall/kitchen_dto.go
@@ -7,40 +7,30 @@ import (
 )
 
 type KitchenInputDTO struct {
-	ID          string    `json:"id"`
-	OrderID     string    `json:"order_id"`
-	ItemID      string    `json:"item_order_id"`
-	ProductName string    `json:"product_name"`
-	Responsible string    `json:"responsible"`
-	CreatedAt   time.Time `json:"created_at"`
+	ID        string    `json:"id"`
+	OrderID   string    `json:"order_id"`
+	CreatedAt time.Time `json:"created_at"`
 }
 
 func (dto *KitchenInputDTO) ToEntity() *entity.Kitchen {
 	return &entity.Kitchen{
-		ID:          dto.ID,
-		OrderID:     dto.OrderID,
-		ItemID:      dto.ItemID,
-		ProductName: dto.ProductName,
-		Responsible: dto.Responsible,
-		CreatedAt:   dto.CreatedAt,
+		ID:        dto.ID,
+		OrderID:   dto.OrderID,
+		CreatedAt: dto.CreatedAt,
 	}
 }
 
 type KitchenFindAllAOutputDTO struct {
-	ID          string    `json:"id"`
-	OrderID     string    `json:"order_id"`
-	ItemID      string    `json:"item_order_id"`
-	ProductName string    `json:"product_name"`
-	Responsible string    `json:"responsible"`
-	CreatedAt   time.Time `json:"created_at"`
+	ID            string    `json:"id"`
+	OrderID       string    `json:"order_id"`
+	Queue         string    `json:"queue"`
+	EstimatedTime string    `json:"estimated_time"`
+	CreatedAt     time.Time `json:"created_at"`
 }
 
 func (dto *KitchenFindAllAOutputDTO) FromEntity(customer entity.Kitchen) {
 	dto.ID = customer.ID
 	dto.OrderID = customer.OrderID
-	dto.ItemID = customer.ItemID
-	dto.ProductName = customer.ProductName
-	dto.Responsible = customer.Responsible
 	dto.CreatedAt = customer.CreatedAt
 
 }
